--- a/src/main/java/stockmanager/ui/MainWindow.form
+++ b/src/main/java/stockmanager/ui/MainWindow.form
@@ -33,6 +33,7 @@
       <xy x="20" y="20" width="800" height="260"/>
     </constraints>
     <properties>
+      <enabled value="true"/>
       <minimumSize width="800" height="260"/>
       <name value="Animal Breeding"/>
       <preferredSize width="800" height="260"/>
@@ -229,6 +230,7 @@
         </constraints>
         <properties>
           <columns value="5"/>
+          <dragEnabled value="false"/>
           <editable value="true"/>
           <enabled value="true"/>
           <horizontalAlignment value="0"/>
